tests/03-non-bool-return-type.rs
use constable::lookup;

#[lookup]
const fn foo(_x: u8) -> i8 {
    0
}

fn main() {}
